--- a/Practical 1.html
+++ b/Practical 1.html
@@ -1,13 +1,12 @@
 <html>
-<title>SBJITMR</title>
-<h1>SAHIL.KHOBRAGADE(CS24038)</h1>
-<h3 align="center">Practical 1</h3>
+<title>Practical 1</title>
+<h1 align="center">SAHIL KHOBRAGADE CS24038</h1>
 <body bgcolor="gray">
 <p>
-Like SBJITMR is an autonomous institute. It is located at <i>fetri village</i> Nagpur. In SBJIT we have <b>CSE,ETC,ME,EE</b>branch.
+SBJIT is an autonomous institute. It is located at <i>Fetri village</i> ,Nagpur. In SBJIT we have <b>CSE,ETC,ME,EE</b>branch and <u> 240 intake of students </u> 
 <h4 style="color:aqua">College has great infrastructure</h4>
 
-<img width="400px" src="C:\Users\sahil\Downloads\abc.jpg"
+<img src="C:\Users\sahil\Downloads\abc.jpg"
 
 </p>
 </body>
