--- a/Practical 1.html
+++ b/Practical 1.html
@@ -1,13 +1,11 @@
 <html>
 <title>Practical 1</title>
-<h1 align="center">SAHIL KHOBRAGADE CS24038</h1>
-<body bgcolor="gray">
-<p>
-SBJIT is an autonomous institute. It is located at <i>Fetri village</i> ,Nagpur. In SBJIT we have <b>CSE,ETC,ME,EE</b>branch and <u> 240 intake of students </u> 
-<h4 style="color:aqua">College has great infrastructure</h4>
-
-<img src="C:\Users\sahil\Downloads\abc.jpg"
-
-</p>
+<body bgcolor="Gray">
+	<h2 align="center">SAHIL KHOBRAGADE CS24038</h2>
+	<p>
+		SBJIT is an autonomous institute. It is located at <i> Fetri village </i>, Nagpur. In SBJIT we have <b> CSE,ETC,EE,ME </b> branch and we have <u> 240 intake of CSE branch</u>.
+		<h4 style="color:aqua">College has a great infrastructure</h4>
+		<img src ="C:\Users\sahil\Downloads\abc.jpg">
+	</p>
 </body>
 </html>
