--- a/Practical3.html
+++ b/Practical3.html
@@ -1,1 +1,53 @@
-
+<html>
+    <title>Practical 3</title>
+    <body>
+        <h3 align="center">SAHIL KHOBRAGADE CS24038</h3>
+        <table border="1" cellspacing="2" cellspadding="1">
+            <tr>
+                <th>Day/Time</th>
+                <th>7:00pm to 8:00pm</th>
+                <th>8:00pm to 8:30pm</th>
+                <th>8:30pm to 10:00pm</th>
+                <th>10:00pm to 11:00pm</th>
+            </tr>
+            <tr>
+                <td>Mon</td>
+                <td>M2</td>
+                <td rowspan="7">Dinner time</td>
+                <td>CH</td>
+                <td rowspan="6">Assignment Completion</td>
+            </tr>
+            <tr>
+               <td>Tue</td>
+               <td>M2</td>
+               <td>ACP</td>
+            </tr>
+            <tr>
+                <td>Wed</td>
+                <td>BEE</td>
+                <td>M2</td>
+            </tr>
+            <tr>
+                <td>Thu</td>
+                <td>CH</td>
+                <td>M2</td>
+            </tr>
+            <tr>
+                <td>Fri</td>
+                <td>ACP</td>
+                <td>BEE</td>
+            </tr>
+            <tr>
+                <td>Sat</td>
+                <td>BEE</td>
+                <td>M2</td>
+            </tr>
+            <tr>
+                <td>Sun</td>
+                <td>Esports</td>
+                <td>Revision</td>
+                <td>No schedule</td>
+            </tr>
+        </table>
+    </body>
+</html>
