--- a/Practical3.html
+++ b/Practical3.html
@@ -1,7 +1,7 @@
 <html>
     <title>Practical 3</title>
     <body>
-        <h3 align="center">SAHIL KHOBRAGADE CS24038</h3>
+        <h3>SAHIL KHOBRAGADE CS24038</h3>
         <table border="1" cellspacing="2" cellspadding="1">
             <tr>
                 <th>Day/Time</th>
