--- a/Practical3.html
+++ b/Practical3.html
@@ -15,7 +15,7 @@
                 <td>M2</td>
                 <td rowspan="7">Dinner time</td>
                 <td>CH</td>
-                <td rowspan="6">Assignment Completion</td>
+                <td rowspan="5">Assignment Completion</td>
             </tr>
             <tr>
                <td>Tue</td>
@@ -40,12 +40,12 @@
             <tr>
                 <td>Sat</td>
                 <td>BEE</td>
-                <td>M2</td>
+                <td colspan="2">Assignment Completion</td>
             </tr>
             <tr>
                 <td>Sun</td>
                 <td>Esports</td>
-                <td>Revision</td>
+                <td>M2</td>
                 <td>No schedule</td>
             </tr>
         </table>
