--- a/practical8.html
+++ b/practical8.html
@@ -1,8 +1,23 @@
 <html>
 <head>
   <title>Login Form</title>
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <style>
+    *{
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+}
+
+html,body{
+    height: 100%;
+    width: 100%;
+}
+
+body{
+    background: linear-gradient(#0000ff65, #bc31f7ca, #fabd4cb5);
+}
+  </style>
 </head>
 <body align="center">
 
